--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,19 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <div class="bg-danger">salom</div>
-    <h1>salom</h1>
-    <bs-button href="#link">Click Me</bs-button>
-    <bs-badge href="#link">Click Me</bs-badge>
-    <script type="module" src="../js/app.js"></script>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TMDB Clone</title>
+    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
+    <link rel="stylesheet" href="../sass/film.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="container">
+          <div class="navbar">
+            <ul class="nav_menu">
+              <a href="#"
+                ><img
+                  src="../img/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg"
+                  alt="Logo"
+              /></a>
+              <li><a href="#">Фильмы</a></li>
+              <li><a href="#">Сериалы</a></li>
+              <li><a href="#">Люди</a></li>
+              <li><a href="#">Ещё</a></li>
+            </ul>
+            <ul class="join_menu">
+              <li><a href="#">+</a></li>
+              <li><a href="#">Ru</a></li>
+              <li><a href="#">Войти</a></li>
+              <li><a href="#">Присоединиться к TMDB</a></li>
+              <li>
+                <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <section class="inner_content">
+      <div class="container">
+        <div class="inner_title">
+          <h2>Добро пожаловать.</h2>
+          <h3>Миллионы фильмов, сериалов и людей. Исследуйте сейчас.</h3>
+        </div>
+        <div class="search">
+          <form id="inner_search_form">
+            <label>
+              <input
+                name="query"
+                type="text"
+                placeholder="Найти фильм, сериал, персону......"
+                value=""
+                class="search_input"
+              />
+            </label>
+            <input type="submit" value="Search" class="search_submit" />
+          </form>
+        </div>
+      </div>
+    </section>
+    <section class="films">
+      <div class="container">
+        <h3>Что популярно</h3>
+      </div>
+    </section>
+    <script type="module" src="../js/getFilm.js"></script>
+    <script
+      src="https://kit.fontawesome.com/a454391daa.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
