--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,19 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="../sass/main.scss" />
+  </head>
 
-<body>
-    <div class="bg-danger">salom</div>
-    <h1>salom</h1>
-    <bs-button href="#link">Click Me</bs-button>
-    <bs-badge href="#link">Click Me</bs-badge>
+  <body>
+    <!------------- HEADER ------------>
+    <header>
+      <nav>
+        <div class="container">
+          <div class="navbar">
+            <ul class="nav__menu">
+              <a href="#">
+                <img
+                  src="../img/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg"
+                  alt="logo"
+                />
+              </a>
+              <li><a href="#">фильмы</a></li>
+              <li><a href="#">сериалы</a></li>
+              <li><a href="#">люди</a></li>
+              <li><a href="#">ешё</a></li>
+            </ul>
+            <ul class="join__menu">
+              <li><a href="">+</a></li>
+              <li><a href="">Ru</a></li>
+              <li><a href="">Войти</a></li>
+              <li><a href="">Присоединиться к TMDB</a></li>
+              <li>
+                <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!------------- NAV__MENU ------------>
+
+    <section class="section__content">
+      <div class="container">
+        <div class="section__title">
+          <h2>Добро пожаловать</h2>
+          <h3>миллионы фильмы, сериалов и людей. Исследуйт сейчас.</h3>
+        </div>
+        <div class="search">
+          <form id="section__search__form">
+            <label for="">
+              <input
+                name="query"
+                type="text"
+                placeholder="Найти фильм, сериал, персону......"
+                value=""
+                class="search__input"
+              />
+            </label>
+            <input type="submit" value="Search" class="search_submit" />
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <section class="films">
+        <div class="container">
+            <h3>Что популярно</h3>
+        </div>
+    </section>
+
     <script type="module" src="../js/app.js"></script>
-</body>
-
+  </body>
 </html>
