--- a/src/pages/movie.html
+++ b/src/pages/movie.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+
+    <section>
+        <div class="container">
+            <div class="movie">
+                
+            </div>
+        </div>
+    </section>
+
+
     <script type="module" src="../js/app.js"></script>
 </body>
 </html>
