--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,13 +6,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <script defer src="/your-path-to-fontawesome/js/fontawesome.js"></script> -->
 </head>
 
 <body>
-    <div class="bg-danger">salom</div>
-    <h1>salom</h1>
-    <bs-button href="#link">Click Me</bs-button>
-    <bs-badge href="#link">Click Me</bs-badge>
+
+    <header>
+        <div class="container">
+            <nav class="nav__menu">
+                <li class="logo">
+                    <a href="./index.html" class="logo__hero">
+                        <img width="100%" src="/src/assets/img/logo.png" alt="logo">
+                    </a>
+                </li>
+                <ul class="nav__menu_link">
+                    <li class="nav__item"><a href="#" class="nav__item_link">Movies</a></li>
+                    <li class="nav__item"><a href="#" class="nav__item_link">Tv Shows</a></li>
+                    <li class="nav__item"><a href="#" class="nav__item_link">People</a></li>
+                    <li class="nav__item"><a href="#" class="nav__item_link">More</a></li>
+                </ul>
+
+
+                <!-- <div class="add__movies"><i class="fa-solid fa-plus"></i>efer</div> -->
+                <div class="btn">
+                    <button>Login</button>
+                    <button>Join TMDB</button>
+                </div>
+
+            </nav>
+        </div>
+
+    </header>
+
+    <section>
+        <div class="container">
+
+            <div class="show__click">
+                <button class="show__movei">Movies</button>
+                <button class="show__tv">Tv Shows</button>
+            </div>
+
+            <p class="section__title">What's Popular</p>
+            <div class="row get__movie">
+
+            </div>
+
+            <div class="row get__tv hide">
+
+            </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="show__trialler">
+                <button class="show__moveis">On Tv</button>
+                <button class="show__tvs">In Teaters</button>
+            </div>
+
+            <p class="section__title">Latest Trailers</p>
+            <div class="row get__movie_triller">
+
+            </div>
+
+            <div class="row get__tv_treller hide">
+
+            </div>
+
+
+
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <p class="section__title">Treading</p>
+            <div class="row get__movie_day">
+
+            </div>
+
+            <div class="row get__tv_week ">
+
+            </div>
+        </div>
+    </section>
+
     <script type="module" src="../js/app.js"></script>
 </body>
 
