--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,13 +6,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../sass/main.scss">
 </head>
 
 <body>
-    <div class="bg-danger">salom</div>
-    <h1>salom</h1>
-    <bs-button href="#link">Click Me</bs-button>
-    <bs-badge href="#link">Click Me</bs-badge>
+    <header>
+        <div class="container">
+                <nav>
+                <div class="header_links">
+                    <img width="154" height="20" src="../img/logo.png" alt="">
+                    <a href="">Movies</a>
+                    <a href="">TV Shows</a>
+                    <a href="">People</a>
+                    <a href="">More</a>
+                </div>
+                <div class="header_icons">
+                    <i class="fa-solid fa-plus plus"></i>
+                    <a href="">Login</a>
+                    <a href="">Join TMDB</a>
+                    <i class="fa-solid fa-magnifying-glass search"></i>
+                </div>
+            </nav>
+            </div>
+    </header>
+
+    <section>
+        <div class="container">
+            <div class="hero">
+                <p class="hero_title">Welcome.</p>
+                <p class="general_title">Millions of movies,TV shows and people to discover.Explore now.</p>
+                <form class="example" action="">
+                    <input type="text" placeholder="Search for a movie,tv show,person..." name="search">
+                    <button type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </section> 
+
+    <section>
+        <div class="container">
+            <div class="movies">
+                <h2>What's Popular</h2>
+                <div class="movie_cards">
+                    <div class="card">
+                       <div class="image">
+                        <img class="card_img" src="../img/image_2022-10-14_19-53-16.png" alt="Avatar"  width="100%" height="225">
+                       </div>
+                        <div class="card_text">
+                            <p class="card_title">John Doe</p>
+                            <p>Architect & Engineer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script type="module" src="../js/app.js"></script>
 </body>
 
