--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -64,7 +64,7 @@
         <h3>Что популярно</h3>
       </div>
     </section>
-    <script type="module" src="../js/getFilm.js"></script>
+    <script type="module" src="../js/app.js"></script>
     <script
       src="https://kit.fontawesome.com/a454391daa.js"
       crossorigin="anonymous"
