--- a/src/pages/movie.html
+++ b/src/pages/movie.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <section>
+        <div class="container">
+            
+        </div>
+    </section>
+
     <script type="module" src="../js/app.js"></script>
 </body>
 </html>
