--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,7 +16,7 @@
                 <div class="navbar">
                     <ul class="nav_menu">
                         <a href="#"><img src="../assets/img/logo.svg" alt="Logo" /></a>
-                        <li><a href="#">Фильмы</a></li>
+                        <li><a href="./moveidetailes.html">Фильмы</a></li>
                         <li><a href="#">Сериалы</a></li>
                         <li><a href="#">Люди</a></li>
                         <li><a href="#">Ещё</a></li>
