progress movie details

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../sass/main.scss">
 </head>
 
 <body>
@@ -16,7 +15,7 @@
                 <div class="navbar">
                     <ul class="nav_menu">
                         <a href="#"><img src="../assets/img/logo.svg" alt="Logo" /></a>
-                        <li><a href="./moveidetailes.html">Фильмы</a></li>
+                        <li><a href="#">Фильмы</a></li>
                         <li><a href="#">Сериалы</a></li>
                         <li><a href="#">Люди</a></li>
                         <li><a href="#">Ещё</a></li>
@@ -56,6 +55,16 @@
             <h3>Что популярно</h3>
         </div>
     </section>
+
+
+    <section>
+        <div class="container">
+            <div class="get__movie">
+                
+            </div>
+        </div>
+    </section>
+
     <script type="module" src="../js/app.js"></script>
 </body>
 
