--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,7 +18,7 @@
                         <a href="#"><img src="../assets/img/logo.svg" alt="Logo" /></a>
                         <li><a href="#">Фильмы</a></li>
                         <li><a href="#">Сериалы</a></li>
-                        <li><a href="#">Люди</a></li>
+                        <li><a href="./actorDetails.html">Люди</a></li>
                         <li><a href="#">Ещё</a></li>
                     </ul>
                     <ul class="join_menu">
@@ -54,6 +54,10 @@
     <section class="films">
         <div class="container">
             <h3>Что популярно</h3>
+
+            <div class="get__movie">
+                
+            </div>
         </div>
     </section>
     <script type="module" src="../js/app.js"></script>
