:zap: major improvement

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -40,9 +40,9 @@
                 <h3>Миллионы фильмов, сериалов и людей. Исследуйте сейчас.</h3>
             </div>
             <div class="search">
-                <form id="inner_search_form">
+                <form class="inner_search_form">
                     <label>
-                        <input name="query" type="text" placeholder="Найти фильм, сериал, персону......" value=""
+                        <input name="title" type="text" placeholder="Найти фильм, сериал, персону......" value=""
                             class="search_input" />
                     </label>
                     <input type="submit" value="Search" class="search_submit" />
@@ -61,7 +61,7 @@
     <section>
         <div class="container">
             <div class="get__movie">
-                
+
             </div>
         </div>
     </section>
