--- a/src/pages/movie.html
+++ b/src/pages/movie.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <header>
+        <nav>
+            <div class="container">
+                <div class="navbar">
+                    <ul class="nav_menu">
+                        <a href="#"><img src="../assets/img/logo.svg" alt="Logo" /></a>
+                        <li><a href="#">Фильмы</a></li>
+                        <li><a href="#">Сериалы</a></li>
+                        <li><a href="#">Люди</a></li>
+                        <li><a href="#">Ещё</a></li>
+                    </ul>
+                    <ul class="join_menu">
+                        <li><a href="#">+</a></li>
+                        <li><a href="#">Ru</a></li>
+                        <li><a href="#">Войти</a></li>
+                        <li><a href="#">Присоединиться к TMDB</a></li>
+                        <li>
+                            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+
+    <section>
+        <div class="container">
+            <div class="movies__detailes">
+
+
+            </div>
+        </div>
+    </section>
     <script type="module" src="../js/app.js"></script>
 </body>
+
 </html>
