progress movie.html and progress card

--- a/src/pages/movie.html
+++ b/src/pages/movie.html
@@ -44,6 +44,17 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="container">
+            <h1>Series Cast</h1>
+            <div class="cast__people">
+
+            </div>
+            <div class="crew__people">
+
+            </div>
+        </div>
+    </section>
     <script type="module" src="../js/app.js"></script>
 </body>
 
