--- a/src/pages/actor.html
+++ b/src/pages/actor.html
@@ -9,6 +9,38 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+          <div class="container">
+            <div class="navbar">
+              <ul class="nav_menu">
+                <a href="#"><img src="../assets/img/logo.svg" alt="Logo" /></a>
+                <li><a href="#">Фильмы</a></li>
+                <li><a href="#">Сериалы</a></li>
+                <li><a href="#">Люди</a></li>
+                <li><a href="#">Ещё</a></li>
+              </ul>
+              <ul class="join_menu">
+                <li><a href="#">+</a></li>
+                <li><a href="#">Ru</a></li>
+                <li><a href="#">Войти</a></li>
+                <li><a href="#">Присоединиться к TMDB</a></li>
+                <li>
+                  <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
+
+      <section class="actor__details">
+        <div class="container">
+          <div class="actor"></div>
+        </div>
+
+      </section>
+    
     <ul></ul>
     <script type="module" src="../js/app.js"></script>
 </body>
