--- a/src/pages/movie.html
+++ b/src/pages/movie.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="navbar">
                     <ul class="nav_menu">
-                        <a href="#"><img src="../assets/img/logo.svg" alt="Logo" /></a>
+                        <a href="./index.html"><img src="../assets/img/logo.svg" alt="Logo" /></a>
                         <li><a href="#">Фильмы</a></li>
                         <li><a href="#">Сериалы</a></li>
                         <li><a href="#">Люди</a></li>
