--- a/src/pages/people.html
+++ b/src/pages/people.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="../sass/main.scss">
 </head>
 
 <body>
@@ -15,7 +14,7 @@
       <div class="container">
         <div class="navbar">
           <ul class="nav_menu">
-            <a href="#"><img src="../assets/img/logo.svg" alt="Logo" /></a>
+            <a href="./index.html"><img src="../assets/img/logo.svg" alt="Logo" /></a>
             <li><a href="#">Фильмы</a></li>
             <li><a href="#">Сериалы</a></li>
             <li><a href="#">Люди</a></li>
