--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -9,7 +9,37 @@
 </head>
 
 <body>
-    <div class="get__movie"></div>
+    <header>
+        <nav>
+          <div class="container">
+            <div class="navbar">
+              <ul class="nav_menu">
+                <a href="./index.html"><img src="../assets/img/logo.svg" alt="Logo" /></a>
+                <li><a href="#">Фильмы</a></li>
+                <li><a href="#">Сериалы</a></li>
+                <li><a href="#">Люди</a></li>
+                <li><a href="#">Ещё</a></li>
+              </ul>
+              <ul class="join_menu">
+                <li><a href="#">+</a></li>
+                <li><a href="#">Ru</a></li>
+                <li><a href="#">Войти</a></li>
+                <li><a href="#">Присоединиться к TMDB</a></li>
+                <li>
+                  <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
+    <section>
+        <div class="container">
+            <div class="get__movie">
+        
+            </div>
+        </div>
+    </section>
     
 
 
