--- a/src/pages/actor.html
+++ b/src/pages/actor.html
@@ -40,6 +40,12 @@
         </div>
 
       </section>
+      <section>
+        <div class="container">
+          <div class="cast__films"></div>
+          
+        </div>
+      </section>
     
     <ul></ul>
     <script type="module" src="../js/app.js"></script>
