--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -68,15 +68,16 @@
         </div>
     </nav>
 </header>
+<hr>
     <section>
         <div class="container">
-          <div class="row movie__wrapper">
-            <div class="col">
+          <div class="movie__wrapper">
+            <div class="serch__detail">
                <div class="main">
                  <div class="result">
                     <h3>Search results</h3>
                  </div>
-                 <div class="just">
+                 <div class="just__one">
                    <p>Movies</p>
                    <p>119</p>
                  </div>
@@ -109,7 +110,7 @@
                  
                </div>
             </div>
-            <div class="col">
+            <div class="serch__detail_col">
               <div class="get__movie">
                 
               </div>
