--- a/src/pages/movie.html
+++ b/src/pages/movie.html
@@ -68,10 +68,54 @@
             </div>
         </nav>
     </header>
+    <div class="nav__part">
+      <div class="dropdown">
+        <button class="dropbtn"><li><a >Overview</a></li> 
+        </button>
+        <div class="dropdown-content">
+          <a href="./movie.html">Main</a>
+          <a href="#">Alternative Title</a>
+          <a href="#">Case & Crew</a>
+          <a href="#">Epesode Groups</a>
+          <a href="#">Seazons</a>
+          <a href="#">Translitions</a>
+          <a href="#">Chenges</a>
+          <a href="#">Report</a>
+          <a href="#">Edit</a>
+        </div>
+      </div> 
+      <div class="dropdown">
+        <button class="dropbtn"> <li><a href="#">Media</a></li>
+        </button>
+        <div class="dropdown-content">
+          <a href="#">Bacdrops</a>
+          <a href="#">Logos</a>
+          <a href="#">Posters</a>
+          <a href="#">Vedios</a>
+        </div>
+      </div> 
+      <div class="dropdown">
+        <button class="dropbtn">  <li><a href="#">Fardom</a></li>
+        </button>
+        <div class="dropdown-content">
+          <a href="#">Discussions</a>
+          <a href="#">Review</a>
+        </div>
+      </div> 
+      <div class="dropdown">
+        <button class="dropbtn"> <li><a href="#">Shere</a></li>
+        </button>
+        <div class="dropdown-content">
+          <a href="#">Shere-link</a>
+          <a href="#">Facebook</a>
+          <a href="#">Tweet</a>
+        </div>
+      </div> 
+    </div>
 
 
 
-    <section>
+    <section class="movie__section">
         <div class="container">
             <div class="movies__detailes">
 
@@ -79,7 +123,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section > 
         <div class="container">
             <h1>Series Cast</h1>
             <div class="cast__people">
