actor/style tugamadi

--- a/src/pages/actor.html
+++ b/src/pages/actor.html
@@ -133,8 +133,8 @@
   </section>
   <section>
     <div class="container">
-      <div class="cast__films"></div>
-
+     
+      <div class="crew__films"></div>
     </div>
   </section>
 
