:construction: form data collector function added

--- a/src/pages/actor.html
+++ b/src/pages/actor.html
@@ -20,7 +20,7 @@
                 <li><a>Movies</a></li>
               </button>
               <div class="dropdown-content">
-                <a href="./searchess.html">Popular</a>
+                <a href="./movies.html">Popular</a>
                 <a href="#">Now Playing</a>
                 <a href="#">Upcoming</a>
                 <a href="#">Top Rated</a>
@@ -31,7 +31,7 @@
                 <li><a href="#">TV Shows</a></li>
               </button>
               <div class="dropdown-content">
-                <a href="./searchess.html">Popular</a>
+                <a href="./movies.html">Popular</a>
                 <a href="#">Airing Today</a>
                 <a href="#">On TV</a>
                 <a href="#">Top Rated</a>
