--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -19,7 +19,7 @@
                         <button class="dropbtn"><li><a >Movies</a></li> 
                         </button>
                         <div class="dropdown-content">
-                          <a href="./searchess.html">Popular</a>
+                          <a href="./movies.html">Popular</a>
                           <a href="#">Now Playing</a>
                           <a href="#">Upcoming</a>
                           <a href="#">Top Rated</a>
@@ -29,7 +29,7 @@
                         <button class="dropbtn"> <li><a href="#">TV Shows</a></li>
                         </button>
                         <div class="dropdown-content">
-                          <a href="./searchess.html">Popular</a>
+                          <a href="./movies.html">Popular</a>
                           <a href="#">Airing Today</a>
                           <a href="#">On TV</a>
                           <a href="#">Top Rated</a>
