added a new feature (card content)

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -102,6 +102,6 @@
         <div class="get__movie"></div>
       </div>
     </section>
-    <script type="module" src="../js/app.js"></script>card
+    <script type="module" src="../js/app.js"></script>
   </body>
 </html>
