--- a/src/pages/movies.html
+++ b/src/pages/movies.html
@@ -81,6 +81,10 @@
             placeholder="String"
             name="sort_by"
           ></select>
+          <select
+          id="languageSelector"
+          name="with_original_language">
+          </select>
 
           <ul
             id="with_genres"
