added card content

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -97,8 +97,11 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="card_section">
       <div class="container">
+        <h2>What's Popular</h2>
+        <button>On TV</button>
+        <button>In Theaters</button>
         <div class="get__movie"></div>
       </div>
     </section>
