:zap: card ui added and filter issue fixed

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aws-11 The_Movie DB</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
   </head>
 
   <body>
@@ -97,14 +101,15 @@
         </div>
       </div>
     </section>
-    <section class="card_section">
+    <!-- card_section -->
+    <section class="movies">
       <div class="container">
-        <h2>What's Popular</h2>
-        <button>On TV</button>
-        <button>In Theaters</button>
-        <div class="get__movie"></div>
+        <div class="row">
+          <h2>What's Popular</h2>
+          <div><button>On TV</button> <button>In Theaters</button></div>
+        </div>
+        <div class="row movies__wrapper"></div>
       </div>
-
     </section>
     <script type="module" src="../js/app.js"></script>
   </body>
