--- a/src/pages/movies.html
+++ b/src/pages/movies.html
@@ -81,10 +81,10 @@
             placeholder="String"
             name="sort_by"
           ></select>
-          <select
+          <!-- <select
           id="languageSelector"
           name="with_original_language">
-          </select>
+          </select> -->
 
           <ul
             id="with_genres"
@@ -101,7 +101,7 @@
     </section>
     <section>
       <div class="container">
-        <div class="get__movie"></div>
+        <div class="movies__wrapper"></div>
       </div>
     </section>
 
