--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -111,7 +111,7 @@
                </div>
             </div>
             <div class="serch__detail_col">
-              <div class="get__movie">
+              <div class="movies__wrapper">
                 
               </div>
             </div>
