--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,6 +11,7 @@
     />
   </head>
 
+  
   <body>
     <header>
       <nav>
@@ -18,41 +19,41 @@
           <div class="navbar">
             <ul class="nav_menu">
               <a href="#"><img src="../assets/img/logo.svg" alt="Logo" /></a>
-              <div class="dropdown">
+              <div class="drop">
                 <button class="dropbtn">
                   <li><a>Movies</a></li>
                 </button>
-                <div class="dropdown-content">
+                <div class="drop-content">
                   <a href="./movies.html">Popular</a>
                   <a href="#">Now Playing</a>
                   <a href="#">Upcoming</a>
                   <a href="#">Top Rated</a>
                 </div>
               </div>
-              <div class="dropdown">
+              <div class="drop">
                 <button class="dropbtn">
                   <li><a href="#">TV Shows</a></li>
                 </button>
-                <div class="dropdown-content">
+                <div class="drop-content">
                   <a href="./movies.html">Popular</a>
                   <a href="#">Airing Today</a>
                   <a href="#">On TV</a>
                   <a href="#">Top Rated</a>
                 </div>
               </div>
-              <div class="dropdown">
+              <div class="drop">
                 <button class="dropbtn">
                   <li><a href="#">People</a></li>
                 </button>
-                <div class="dropdown-content">
+                <div class="drop-content">
                   <a href="./people.html">Popular People</a>
                 </div>
               </div>
-              <div class="dropdown">
+              <div class="drop">
                 <button class="dropbtn">
                   <li><a href="#">More</a></li>
                 </button>
-                <div class="dropdown-content">
+                <div class="drop-content">
                   <a href="#">Discussions</a>
                   <a href="#">Leaderboard</a>
                   <a href="#">Support</a>
@@ -104,9 +105,9 @@
     <!-- card_section -->
     <section class="movies">
       <div class="container">
-        <div class="row">
-          <h2>What's Popular</h2>
-          <div><button>On TV</button> <button>In Theaters</button></div>
+        <div class="row row__outline--show">
+          <h2 class="popular__title">What's Popular</h2>
+          <div class="btn__wrapper--show"><button class="show__movie">On Movies</button> <button class="show__tv">On TV</button></div>
         </div>
         <div class="row movies__wrapper"></div>
       </div>
@@ -114,3 +115,16 @@
     <script type="module" src="../js/app.js"></script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
