--- a/src/pages/movies.html
+++ b/src/pages/movies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Aws-11 The_Movie DB</title>
   </head>
   <body>
     <header>
@@ -12,48 +12,48 @@
         <div class="container">
           <div class="navbar">
             <ul class="nav_menu">
-              <a href="./index.html"
-                ><img src="../assets/img/logo.svg" alt="Logo"
-              /></a>
-              <div class="dropdown">
+              <a href="./index.html"><img src="../assets/img/logo.svg" alt="Logo" /></a>
+              <div class="drop">
                 <button class="dropbtn">
                   <li><a>Movies</a></li>
                 </button>
-                <div class="dropdown-content">
+                <div class="drop-content">
                   <a href="./movies.html">Popular</a>
                   <a href="#">Now Playing</a>
                   <a href="#">Upcoming</a>
                   <a href="#">Top Rated</a>
                 </div>
               </div>
-              <div class="dropdown">
+              <div class="drop">
                 <button class="dropbtn">
                   <li><a href="#">TV Shows</a></li>
                 </button>
-                <div class="dropdown-content">
+                <div class="drop-content">
                   <a href="./movies.html">Popular</a>
                   <a href="#">Airing Today</a>
                   <a href="#">On TV</a>
                   <a href="#">Top Rated</a>
                 </div>
               </div>
-              <div class="dropdown">
+              <div class="drop">
                 <button class="dropbtn">
                   <li><a href="#">People</a></li>
                 </button>
-                <div class="dropdown-content">
+                <div class="drop-content">
                   <a href="./people.html">Popular People</a>
                 </div>
               </div>
-              <div class="dropdown">
+              <div class="drop">
                 <button class="dropbtn">
                   <li><a href="#">More</a></li>
                 </button>
-                <div class="dropdown-content">
+                <div class="drop-content">
                   <a href="#">Discussions</a>
                   <a href="#">Leaderboard</a>
                   <a href="#">Support</a>
-                  <a href="#">API</a>
+                  <a href="https://developers.themoviedb.org/3" target="_blank"
+                    >API</a
+                  >
                 </div>
               </div>
             </ul>
@@ -72,38 +72,42 @@
         </div>
       </nav>
     </header>
-    <section>
+    <section >
       <div class="container">
-        <form>
-          <h3>Sort by</h3>
-          <select
-            id="activitySelector"
-            placeholder="String"
-            name="sort_by"
-          ></select>
-          <!-- <select
-          id="languageSelector"
-          name="with_original_language">
-          </select> -->
+       <div class="row">
+        <div class="col">
+          <form>
+            <h3>Sort by</h3>
+            <select
+              id="activitySelector"
+              placeholder="String"
+              name="sort_by"
+            ></select>
+            <!-- <select
+            id="languageSelector"
+            name="with_original_language">
+            </select> -->
+  
+            <ul
+              id="with_genres"
+              class="multi_select text"
+              name="with_genres"
+            ></ul>
+            <div>
+              <input type="date" name="release_date.gte" id="release_date.gte" />
+              <input type="date" name="release_date.lte" id="release_date.lte" />
+            </div>
+            <button class="searchsort">Search</button>
+          </form>
+        </div>
+        <div class="col">
+        <div class="search__results row"></div>
 
-          <ul
-            id="with_genres"
-            class="multi_select text"
-            name="with_genres"
-          ></ul>
-          <div>
-            <input type="date" name="release_date.gte" id="release_date.gte" />
-            <input type="date" name="release_date.lte" id="release_date.lte" />
-          </div>
-          <button class="searchsort">Search</button>
-        </form>
+        </div>
+       </div>
       </div>
     </section>
-    <section>
-      <div class="container">
-        <div class="movies__wrapper"></div>
-      </div>
-    </section>
+    
 
     <script type="module" src="../js/app.js"></script>
   </body>
