--- a/src/pages/actor.html
+++ b/src/pages/actor.html
@@ -6,7 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
 </head>
+
 
 <body>
   <header>
@@ -58,6 +63,14 @@
             </div>
 
 
+
+
+
+
+
+
+
+            
           </ul>
           <ul class="join_menu">
             <li><a href="#"><b>+</b></a></li>
@@ -133,7 +146,9 @@
   </section>
   <section>
     <div class="container">
-      <div class="cast__films"></div>
+      <div class="crew__films">
+        
+      </div>
 
     </div>
   </section>
