creating new search movie with keywords add

--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aws-11 The_Movie DB</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
 </head>
 
 <body>
@@ -117,7 +121,7 @@
                </div>
             </div>
             <div class="serch__detail_col">
-              <div class="movies__wrapper">
+              <div class="movies__wrappe">
                 
               </div>
             </div>
