--- a/src/pages/actor.html
+++ b/src/pages/actor.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aws-11 The_Movie DB</title>
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+/>
 </head>
 
 
@@ -78,7 +82,10 @@
     </nav>
   </header>
 
-  <section>
+
+
+
+  <section class="drobdavn__bar">
     <div class="nav__part">
       <div class="dropdow">
         <button class="dropbtn"><li><a >Overview <i class="fa-sharp fa-solid fa-caret-down"></i></a></li> 
@@ -110,6 +117,9 @@
 
 
 
+      
+
+
       <div class="dropdow">
         <button class="dropbtn">  <li><a href="#">Fardom <i class="fa-sharp fa-solid fa-caret-down"></i></a></li>
         </button>
@@ -129,7 +139,9 @@
       </div> 
     </div>
   </section>
-  <hr>
+
+
+  
 
   <section class="actor__details">
     <div class="container">
@@ -138,16 +150,16 @@
 
   </section>
   <section>
-    <div class="container">
-      <div class="crew__films">
-        
-      </div>
-
-    </div>
+   
   </section>
 
   <ul></ul>
   <script type="module" src="../js/app.js"></script>
+
+
+
+
+
 </body>
 
 </html>
