i don't have enough

--- a/src/pages/movies.html
+++ b/src/pages/movies.html
@@ -74,8 +74,9 @@
     </header>
     <section >
       <div class="container">
+        <h1>Popular Movies</h1>
        <div class="row">
-        <div class="col">
+        <div class=" movies__col__wrapper">
           <form>
             <h3>Sort by</h3>
             <select
@@ -100,8 +101,9 @@
             <button class="searchsort">Search</button>
           </form>
         </div>
-        <div class="col">
+        <div class=" movies__col__wrap">
         <div class="search__results row"></div>
+
 
         </div>
        </div>
