--- a/src/pages/tvsearch.html
+++ b/src/pages/tvsearch.html
@@ -6,21 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aws-11 The_Movie DB</title>
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    />
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+  />
   </head>
-
-  
-  
-  
   <body>
     <header>
       <nav>
         <div class="container">
           <div class="navbar">
             <ul class="nav_menu">
-              <a href="#"><img src="../assets/img/logo.svg" alt="Logo" /></a>
+              <a href="./index.html"><img src="../assets/img/logo.svg" alt="Logo" /></a>
               <div class="drop">
                 <button class="dropbtn">
                   <li><a>Movies</a></li>
@@ -80,75 +76,46 @@
         </div>
       </nav>
     </header>
-    <section class="inner_content">
+    <section >
       <div class="container">
-        <div class="inner_title">
-          <h2>Welcome.</h2>
-          <h3>
-            Millions of movies, TV shows and people to discover. Explore now.
-          </h3>
-        </div>
-        <div class="search">
-          <form class="inner_search_form">
-            <label>
-              <input
-                name="title"
-                type="text"
-                placeholder="Найти фильм, сериал, персону......"
-                value=""
-                class="search_input"
-              />
-            </label>
-            <input type="submit" value="Search" class="search_submit" />
+        <h1>Popular Movies</h1>
+       <div class="row">
+        <div class=" movies__col__wrapper">
+          <form>
+            <h3>Sort by</h3>
+            <select
+              id="activitySelector"
+              placeholder="String"
+              name="sort_by"
+            ></select>
+            <!-- <select
+            id="languageSelector"
+            name="with_original_language">
+            </select> -->
+  
+            <ul
+              id="with_genres"
+              class="multi_select text"
+              name="with_genres"
+            ></ul>
+            <div>
+              <input type="date" name="release_date.gte" id="release_date.gte" />
+              <input type="date" name="release_date.lte" id="release_date.lte" />
+            </div>
+            <button class="searchsort">Search</button>
           </form>
         </div>
-      </div>
-    </section>
-    <!-- card_section -->
-    <section class="movies">
-      <div class="container">
-        <div class="row row__outline--show">
-          <h2 class="popular__title">What's Popular</h2>
-          <div class="btn__wrapper--show"><button class="show__movie">On Movies</button> <button class="show__tv">On TV</button></div>
-        </div>
-        <div class="row movies__wrapper"></div>
-
+        <div class=" movies__col__wrap">
+        <div class="search__results row"></div>
         
 
+        </div>
+       </div>
       </div>
     </section>
-
-    <section>
-      <div class="container">
-        <div class="row movies__wrapper--vedios"></div>
-      </div>
-    </section>
-
-
-
-
-
-
-
-
-
-
-
     
 
     <script type="module" src="../js/app.js"></script>
+   
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
