added movie-Steates and added icon

--- a/src/pages/people.html
+++ b/src/pages/people.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/jpg" href="../assets/img/icon.jpg">
   <title>Aws-11 The_Movie DB</title>
 
 </head>
@@ -18,7 +19,7 @@
             <a href="./index.html"><img src="../assets/img/logo.svg" alt="Logo" /></a>
             <div class="drop">
               <button class="dropbtn">
-                <li><a>Movies</a></li>
+                <li><a href="#">Movies</a></li>
               </button>
               <div class="drop-content">
                 <a href="./movies.html">Popular</a>
