--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/jpg" href="../assets/img/icon.jpg">
     <title>Aws-11 The_Movie DB</title>
     <link
       rel="stylesheet"
@@ -23,7 +24,7 @@
               <a href="#"><img src="../assets/img/logo.svg" alt="Logo" /></a>
               <div class="drop">
                 <button class="dropbtn">
-                  <li><a>Movies</a></li>
+                  <li><a href="#">Movies</a></li>
                 </button>
                 <div class="drop-content">
                   <a href="./movies.html">Popular</a>
