Added profile page and account

--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -21,7 +21,7 @@
         <div class="container">
           <div class="navbar">
             <ul class="nav_menu">
-              <a href="#"><img src="../assets/img/logo.svg" alt="Logo" /></a>
+              <a href="./index.html"><img src="../assets/img/logo.svg" alt="Logo" /></a>
               <div class="drop">
                 <button class="dropbtn">
                   <li><a href="#">Movies</a></li>
@@ -72,7 +72,7 @@
               </li>
               <li><a href="#">EN</a></li>
               <li><a href="#">Login</a></li>
-              <li><a href="./profile.html">Join TMDB</a></li>
+              <li><a href="#">Join TMDB</a></li>
               <li>
                 <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
               </li>
@@ -81,61 +81,12 @@
         </div>
       </nav>
     </header>
-    <section class="inner_content">
-      <div class="container">
-        <div class="inner_title">
-          <h2>Welcome.</h2>
-          <h3>
-            Millions of movies, TV shows and people to discover. Explore now.
-          </h3>
-        </div>
-        <div class="search">
-          <form class="inner_search_form">
-            <label>
-              <input
-                name="title"
-                type="text"
-                placeholder="Найти фильм, сериал, персону......"
-                value=""
-                class="search_input"
-              />
-            </label>
-            <input type="submit" value="Search" class="search_submit" />
-          </form>
-        </div>
-      </div>
-    </section>
-    <!-- card_section -->
-    <section class="movies">
-      <div class="container">
-        <div class="row row__outline--show">
-          <h2 class="popular__title">What's Popular</h2>
-          <div class="btn__wrapper--show"><button class="show__movie">On Movies</button> <button class="show__tv">On TV</button></div>
-        </div>
-        <div class="row movies__wrapper"></div>
-
-        
-
+    <section class="account__img">
+      <div class="container-account">
+          <img width="100%" src="../assets/img/account_img.svg" alt="">
       </div>
     </section>
 
-    <section>
-      <div class="container">
-        <div class="row movies__wrapper--vedios"></div>
-      </div>
-    </section>
-
-
-
-
-
-
-
-
-
-
-
-    
 
     <script type="module" src="../js/app.js"></script>
   </body>
