added footer only index page

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/jpg" href="../assets/img/icon.jpg">
+    <link rel="icon" type="image/jpg" href="../assets/img/icon.jpg" />
     <title>Aws-11 The_Movie DB</title>
     <link
       rel="stylesheet"
@@ -12,9 +12,6 @@
     />
   </head>
 
-  
-  
-  
   <body>
     <header>
       <nav>
@@ -110,12 +107,12 @@
       <div class="container">
         <div class="row row__outline--show">
           <h2 class="popular__title">What's Popular</h2>
-          <div class="btn__wrapper--show"><button class="show__movie">On Movies</button> <button class="show__tv">On TV</button></div>
+          <div class="btn__wrapper--show">
+            <button class="show__movie">On Movies</button>
+            <button class="show__tv">On TV</button>
+          </div>
         </div>
         <div class="row movies__wrapper"></div>
-
-        
-
       </div>
     </section>
 
@@ -127,6 +124,17 @@
 
 
 
+    <!-- <section>
+      <div class="container">
+        <div class="row row__outline--show">
+          <h2 class="popular__title">Trending</h2>
+          <div class="btn__wrapperweek"><button class="show__today">Today</button> <button class="show__week">This week</button></div>
+        </div>
+        <div class="row movies__wrapper-treanding">
+
+        </div>
+      </div>
+    </section> -->
 
 
 
@@ -135,21 +143,57 @@
 
 
 
+
+
+
+
+    <footer>
+      <article class="footer">
+        <div class="join">
+          <img src="../assets/img/img_footer.svg" alt="The Movie Database (TMDB)" width="130" height="94">
+
+          <a class="rounded logged_in" href="./profile.html">Hi karimov_14!</a>
+        </div>
+
+        <div class="footer__wrapper">
+          <h3>The Basics</h3>
+          <ul>
+            <li><a href="#">About TMDB</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Support Forums</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#" target="_blank" rel="noopener">System Status</a></li>
+          </ul>
+        </div>
+        <div class="footer__wrapper">
+          <h3>Get Involved</h3>
+          <ul>
+            <li><a href="#"><span class="glyphicons glyphicons-asterisk"></span> Contribution Bible</a></li>
+            <li><a href="#">Add New Movie</a></li>
+            <li><a href="#">Add New TV Show</a></li>
+          </ul>
+        </div>
+        <div class="footer__wrapper">
+          <h3>Community</h3>
+          <ul>
+            <li><a href="#">Guidelines</a></li>
+            <li><a href="#">Discussions</a></li>
+            <li><a href="#">Leaderboard</a></li>
+            <li><a href="#" target="_blank" rel="noopener">Twitter</a></li>
+          </ul>
+        </div>
+        <div class="footer__wrapper">
+          <h3>Legal</h3>
+          <ul>
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">API Terms of Use</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
+      </article>
+    </footer>
     
 
     <script type="module" src="../js/app.js"></script>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
