added footer all page

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -152,7 +152,7 @@
         <div class="join">
           <img src="../assets/img/img_footer.svg" alt="The Movie Database (TMDB)" width="130" height="94">
 
-          <a class="rounded logged_in" href="./profile.html">Hi karimov_14!</a>
+          <a class="rounded logged_in account__name" href="./profile.html"></a>
         </div>
 
         <div class="footer__wrapper">
