--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -142,6 +142,51 @@
       </div>
     </section>
 
+    <footer>
+      <article class="footer">
+        <div class="join">
+          <img src="../assets/img/img_footer.svg" alt="The Movie Database (TMDB)" width="130" height="94">
+
+          <a class="rounded logged_in account__name" href="./profile.html"></a>
+        </div>
+
+        <div class="footer__wrapper">
+          <h3>The Basics</h3>
+          <ul>
+            <li><a href="#">About TMDB</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Support Forums</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#" target="_blank" rel="noopener">System Status</a></li>
+          </ul>
+        </div>
+        <div class="footer__wrapper">
+          <h3>Get Involved</h3>
+          <ul>
+            <li><a href="#"><span class="glyphicons glyphicons-asterisk"></span> Contribution Bible</a></li>
+            <li><a href="#">Add New Movie</a></li>
+            <li><a href="#">Add New TV Show</a></li>
+          </ul>
+        </div>
+        <div class="footer__wrapper">
+          <h3>Community</h3>
+          <ul>
+            <li><a href="#">Guidelines</a></li>
+            <li><a href="#">Discussions</a></li>
+            <li><a href="#">Leaderboard</a></li>
+            <li><a href="#" target="_blank" rel="noopener">Twitter</a></li>
+          </ul>
+        </div>
+        <div class="footer__wrapper">
+          <h3>Legal</h3>
+          <ul>
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">API Terms of Use</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
+      </article>
+    </footer>
 
     <script type="module" src="../js/app.js"></script>
   </body>
