--- a/src/pages/movie.html
+++ b/src/pages/movie.html
@@ -69,7 +69,7 @@
             </li>
             <li><a href="#">EN</a></li>
             <li><a href="#">Login</a></li>
-            <li><a href="#">Join TMDB</a></li>
+            <li><a href="./profile.html">Join TMDB</a></li>
             <li>
               <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
             </li>
