--- a/src/pages/actor.html
+++ b/src/pages/actor.html
@@ -138,17 +138,6 @@
       </div> 
     </div>
   </section>
-
-
-  
-
-
-
-
-
-  
-  
-
   <section class="actor__details">
     <div class="container">
       <div class="actor"></div>
@@ -156,6 +145,16 @@
 
   </section>
   <section>
+   <div class="container">
+    <div class="row actor__cards">
+      <div class="col actor__img__wrapper">
+
+      </div>
+      <div class="col   actor__wrapper">
+
+      </div>
+    </div>
+   </div>
    
   </section>
 
