added remove favority movie

--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -189,6 +189,11 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="container">
+        <div class="no_results"></div>
+      </div>
+    </section>
 
     <section class="profile__watchlist">
       <div class="container">
