Added rating some errors but working

--- a/src/pages/movie.html
+++ b/src/pages/movie.html
@@ -13,6 +13,9 @@
     />
 </head>
 <body>
+  <div class="loader__movie">
+    <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+  </div>
   <header>
     <nav>
       <div class="container">
